# ml_sandbox

./: .gitignore  Custom_Datasets.ipynb  PyTorchFundamentals.ipynb  README.md  going_modular_section_04.ipynb  nn_from_scratch.py  pyproject.toml  pytorch_recap.ipynb  tensorflow_intro.ipynb  token_classifier_revisited.ipynb
.claude/: settings.local.json
Neural_Net_Theory/: Custom_Datasets.ipynb  main.py  optimizer_comparison.py  simple_net  torchvis_demo.py
Neural_Net_Theory/model_builder/: model_builder.py
Neural_Net_Theory/models/: 05_going_modular_script_mode_tinyvgg_model.pth
Neural_Net_Theory/runs/resnet18_experiment_1/: events.out.tfevents.1770685326.LAPTOP-UE10PMEL.2604.0
Neural_Net_Theory/utils/: data_extract.py  data_setup.py
classification_revisit/: config.py  cross_validation_for_auc.py  production_classifiers_code.py  raw_classifier.py  scikit_classifiers_revisit.ipynb
ml_templates/: raw_classifier.py
movie_genre_classification/: main.py  pyproject.toml
nlp/: OpenBERT.py  nlp_templates.py
transformer_basics/: self_attention_from_scratch.py
